✨ feat(speech): Enhance SpeechRecognitionService to support model selection
- Updated SpeechRecognitionService and its implementation to accept an optional model parameter for audio recognition.
- Modified SpeechRecognitionResponse to include a fileId generated using the snowflake algorithm.
- Adjusted application-speech.yml to change the default model to gummy-realtime-v1.
- Enhanced SpeechRecognitionController to log the selected model during recognition requests.
- Cleaned up unused methods related to public file publishing.